--- a/lib/samplesite/themes/default/fontello.css
+++ b/lib/samplesite/themes/default/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'fontello';
-    src: url('font/fontello.eot?13793670');
-    src: url('font/fontello.eot?13793670#iefix') format('embedded-opentype'),
-         url('font/fontello.woff2?13793670') format('woff2'),
-         url('font/fontello.woff?13793670') format('woff'),
-         url('font/fontello.ttf?13793670') format('truetype'),
-         url('font/fontello.svg?13793670#fontello') format('svg');
+    src: url('/apps/files_picocms/lib/samplesite/themes/default/font/fontello.eot?13793670');
+    src: url('/apps/files_picocms/lib/samplesite/themes/default/font/fontello.eot?13793670#iefix') format('embedded-opentype'),
+         url('/apps/files_picocms/lib/samplesite/themes/default/font/fontello.woff2?13793670') format('woff2'),
+         url('/apps/files_picocms/lib/samplesite/themes/default/font/fontello.woff?13793670') format('woff'),
+         url('/apps/files_picocms/lib/samplesite/themes/default/font/fontello.ttf?13793670') format('truetype'),
+         url('/apps/files_picocms/lib/samplesite/themes/default/font/fontello.svg?13793670#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
 }
