--- a/lib/samplesite/themes/default/index.twig
+++ b/lib/samplesite/themes/default/index.twig
@@ -13,8 +13,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" type="text/css" />
     <link rel="stylesheet" href="{{ theme_url }}/style.css" type="text/css" />
     <link rel="stylesheet" href="{{ theme_url }}/fontello.css" type="text/css" />
-
     <script src="{{ theme_url }}/scripts/modernizr-2.6.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js" type="text/javascript"></script>
+    <script src="{{ theme_url }}/scripts/edit.js"></script>
+    <script type="text/x-mathjax-config">
+		MathJax.Hub.Config({
+		  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+		});
+		</script>
+    <script src="/apps/files_markdown/js/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
 
@@ -32,7 +39,11 @@
                 </ul>
             </nav>
         </div>
+        {% if meta.access == 'private' %}
+            <button class="edit-button btn btn-primary btn-flat" path="{{  oc_path }}" group="{{  oc_group }}">Show file</button>
+        {% endif %}
     </header>
+
 
     <section id="content">
         <div class="inner">
