--- a/lib/samplesite/themes/deic-blog/post.twig
+++ b/lib/samplesite/themes/deic-blog/post.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head data-requesttoken="{{ config.requesttoken }}">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
 	<meta content='{{ config.facebook }}' property='article:publisher'/>
 	<meta content='{{ config.facebook }}' property='article:author'/>
 	<meta content='{{ current_page.url }}' property='og:url'/>
-	<meta content='{% if meta.img %}{{ meta.img }}{% else %}{{ theme_url }}/img/post-bg.jpg{% endif %}' property='og:image'/>
+	<meta content='{% if meta.img %}{{ meta.img }}{% else %}{{ theme_url }}/img/iceberg.png{% endif %}' property='og:image'/>
 	<meta content='{{ meta.description|striptags }}' property='og:description'/>
 	<meta content='{{ site_title }}' property='og:site_name'/>
 	<meta content='en_US' property='og:locale'/>
@@ -24,7 +24,7 @@
 	<meta content='{{ config.twitter }}' name='twitter:site'/>
 	<meta content='{{ config.twitter }}' name='twitter:creator'/>
 	<meta content='{{ meta.description|striptags }}' name='twitter:description'/>
-	<meta content='{% if meta.img %}{{ meta.img }}{% else %}{{ theme_url }}/img/post-bg.jpg{% endif %}' name='twitter:image'/>
+	<meta content='{% if meta.img %}{{ meta.img }}{% else %}{{ theme_url }}/img/iceberg.png{% endif %}' name='twitter:image'/>
     <!-- Bootstrap Core CSS -->
     <link href="{{ theme_url }}/css/bootstrap.min.css" rel="stylesheet">
 
@@ -42,7 +42,22 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="{{ theme_url }}/js/jquery.min.js"></script>
+    <script src="/apps/files_markdown/js/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="/core/js/jquery-1.10.0.min.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+		<script src="/core/js/jquery-migrate-1.2.1.min.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+		<script src="/core/js/jquery-ui-1.10.0.custom.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+		<script src="/core/js/underscore.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/core/js/jquery.avatar.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/themes/deic_theme_oc7/core/js/jquery.ocdialog.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/themes/deic_theme_oc7/core/js/oc-dialogs.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/core/js/jquery-showpassword.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/core/js/placeholders.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+		<script src="/core/js/jquery-tipsy.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+		<script src="/core/js/compatibility.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/themes/deic_theme_oc7/core/js/js.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/themes/deic_theme_oc7/core/js/avatar.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/core/js/placeholder.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
+    <script src="/3rdparty/js/md5/md5.min.js?v=cf866614b6b18cda13fe699a3a65661b" type="text/javascript"></script>
     <script src="{{ theme_url }}/js/bootstrap.min.js"></script>
     <script src="{{ theme_url }}/js/clean-blog.js"></script>
     <script src="/apps/files_markdown/js/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -56,7 +71,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <a class="navbar-brand" href="{{ base_url }}">Home</a>
+                <a class="navbar-brand-post" href="{{ base_url }}">Home</a>
             </div>
 
             <!-- /.navbar-collapse -->
@@ -66,22 +81,29 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: {% if meta.img %} url({{ meta.img }}) {% else %} url('{{ theme_url }}/img/post-bg.jpg'){% endif %};">
+    <header class="post-header">
+			<div id="displayavatar">
+				<a href="{{ base_url }}/search/author:{{ meta.author }}">
+					<div class="avatardiv" author="{{ meta.author }}"></div>
+				</a>
+			</div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading">
                         <h1>{{ meta.title }}</h1>
                         <h2 class="subheading">{{ meta.description }}</h2>
-                        <span class="meta">Posted by <a href="{{ meta.profile }}">{{ meta.author }}</a> on {{ meta.date }}</span>
+                        <span class="meta">Posted by <a href="{{ base_url }}/search/author:{{ meta.author }}">{{ meta.displayname }}</a> on {{ meta.date }}</span>
                     </div>
                 </div>
             </div>
         </div>
         {% if meta.access == 'private' and meta.permissions != 'none' %}
-            <button class="edit-button btn btn-primary btn-flat" path="{{  oc_path }}" id="{{  oc_id }}" user="{{  oc_user }}" group="{{  oc_group }}">Show file</button>
+            <button class="edit-button btn btn-primary btn-flat" path="{{  oc_path }}" file_id="{{  oc_id }}" user="{{  oc_user }}" group="{{  oc_group }}">Show file</button>
         {% endif %}
     </header>
+    
+    <hr class="small">
 
     <!-- Post Content -->
     <article>
