--- a/lib/samplesite/themes/deic-blog/index.twig
+++ b/lib/samplesite/themes/deic-blog/index.twig
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>{{ site_title }}</h1>
+                        <h1><a href="{{ base_url }}">{{ site_title }}</a></h1>
                         <hr class="thin">
                         <span class="subheading">{{ meta.tagline }}</span>
                     </div>
@@ -99,7 +99,7 @@
         
         
         {% if meta.access == 'private' and meta.permissions != 'none' %}
-            <a class="navbar-left write-post" path="{{  oc_path }}" owner="{{  oc_owner }}" user="{{  oc_user }}" group="{{  oc_group }}">Write</a>
+            <a class="navbar-left write-post" share="{{  oc_share }}" path="{{  oc_path }}" owner="{{  oc_owner }}" user="{{  oc_user }}" group="{{  oc_group }}">Write</a>
             <input type="search" id="write_post" name="q" placeholder="Title" />
         {% endif %}
         
