--- a/lib/samplesite/themes/deic-doc/css/style.css
+++ b/lib/samplesite/themes/deic-doc/css/style.css
@@ -1,16 +1,65 @@
+@font-face {
+    font-family: "Circular";
+    font-style: normal;
+    font-weight: 300;
+    src: url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-light.woff2") format("woff2"), url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-light.woff") format("woff");
+}
+@font-face {
+    font-family: "Circular";
+    font-style: normal;
+    font-weight: 400;
+    src: url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-book.woff2") format("woff2"), url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-book.woff") format("woff");
+}
+@font-face {
+    font-family: "Circular";
+    font-style: normal;
+    font-weight: 500;
+    src: url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-medium.woff2") format("woff2"), url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-medium.woff") format("woff");
+}
+@font-face {
+    font-family: "Circular";
+    font-style: normal;
+    font-weight: 700;
+    src: url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-bold.woff2") format("woff2"), url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-bold.woff") format("woff");
+}
+@font-face {
+    font-family: "Circular";
+    font-style: normal;
+    font-weight: 900;
+    src: url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-black.woff2") format("woff2"), url("https://sp-bootstrap.global.ssl.fastly.net/7.2.0/fonts/circular-black.woff") format("woff");
+}
+
 body {
   background-color: #f6f6f6;
-  padding-top: 30px;
-	padding-bottom: 30px;
+  padding-top: 0;
+	padding-bottom: 0;
+  font-family: Circular,Helvetica,Arial,sans-serif;
+  font-size: 16px;
+	font-weight: 200;
+}
+#toc {
+	font-size: 14px;
+}
+body pre, body code{
+	font-size: 14px;
+}
+body pre{
+	border-radius: 2px;
 }
 .main {
   background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 30px 40px;
+  /*border: 1px solid #ccc;*/
+  padding: 24px 42px;
 }
 .container {
   width: 1100px;
 }
+
+.doc-container {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 .nav-list {
   font-size: 17px;
 }
@@ -24,11 +73,16 @@ body {
 .sidebar-header-4 { margin-left: 30px; }
 .sidebar-header-5 { margin-left: 40px; }
 
-
-#toc{float: left;border: 1px solid #bba;background-color: #f7f8ff;margin-left:0.5em;margin-top:0px;margin-bottom:4px;padding: 10px 0px 0px 12px;font-size: 100%;text-align: center;min-width: 12em;}
+#toc {
+    float: left;
+    margin-bottom: 10px;
+    margin-left: 0;
+    margin-top: 0;
+    text-align: center;
+}
 #toc-header{display: inline;padding: 0;font-size: 100%;font-weight: bold;}
-#toc-nav{float: right;font-size: 94%;padding-right: 1.5em;padding-left: 0.5em;}
-#toc ul{list-style: none; margin-left: 0; padding-left: 0; text-align: left;}
+#toc-nav{float: right;font-size: 52%;padding-right: 0;padding-left: 0.5em;}
+#nav #toc ul{list-style: none; margin-left: 0; padding-left: 0; text-align: left;}
 .toc1{}
 .toc2 a {margin-left: 1em;}
 .toc3 a {margin-left: 2em;}
@@ -42,34 +96,45 @@ a:active {text-decoration: none;}
 a:focus {text-decoration: none;}
 
 #nav ul{list-style: none; margin-left: 0; padding-left: 0; text-align: left;}
-#nav li {
+#nav>ul>li {
 	background-color: #b3b3b3;
-	width: 230px;
+}
+#nav li {
+	width: 240px;
 	margin-left: -10px;
 	padding-left: 10px;
 	padding-top: 3px;
 	padding-bottom: 3px;
 }
 #nav li:hover {
-	background-color: #404040;
+	background-color: #808080;
 }
-#nav li.current {
-	background-color: #404040;
+#nav li.current, #nav li.current li {
+	background-color: #d3d3d3;
 }
-#nav li:first-child {
-	padding-top: 17px;
+#nav>ul>li:first-child {
+	padding-top: 10px;
 }
-
+#nav #toc>ul>li:last-child {
+	padding-bottom: 9px;
+}
 form#search_form input#search_submit {
 	margin-bottom: 10px;
 }
 
 .row-fluid .navigation {
-	width: 240px;
+	width: 250px;
   overflow:auto;
 	height: 100%;
 	background-color: #b3b3b3;
 	padding: 10px;
+	position: fixed;
+	top: 0;
+}
+
+.nav {
+	font-size: 16px;
+	font-weight: 50;
 }
 
 #search_form {
@@ -77,7 +142,7 @@ form#search_form input#search_submit {
 	margin-left: -10px;
 	margin-top: -10px;
 	margin-bottom: 0;
-	width: 220px;
+	width: 230px;
 	padding: 10px;
 }
 
@@ -108,9 +173,9 @@ form#search_form input#search_submit {
 
 .row-fluid .main {
     position: absolute;
-    top: 30px;
-		margin-left: 260px;
-		margin-right: 20px;
+    top: 0;
+		margin-left: 250px;
+		margin-right: 0px;
 		width: auto;
 }
 
@@ -120,6 +185,20 @@ form#search_form input#search_submit {
   }
   .row-fluid .main {
 		margin-left: 0;
-}
+	}
+	body{
+		padding-left: 0;
+	}
 }
 
+.icon-home {
+    background-position: 0 -23px;
+    vertical-align: top;
+}
+
+thead th:empty {
+  font-size: 0px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
