--- a/lib/samplesite/themes/deic-doc/css/default_style.css
+++ b/lib/samplesite/themes/deic-doc/css/default_style.css
@@ -130,11 +130,12 @@ h1 {
 
 h2 {
     font-size: 1.7em;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 14px;
 }
 
 h3 {
-    font-size: 1.5em;
+    font-size: 1.4em;
     margin-top: 1.0em;
     margin-bottom: 0.5em;
 }
