--- a/lib/samplesite/themes/deic-blog/profile.twig
+++ b/lib/samplesite/themes/deic-blog/profile.twig
@@ -9,8 +9,11 @@
     <meta name="description" content="{{ meta.description|striptags }}">
 
     <title>{{ meta.title }} - {{ site_title }}</title>
+	<!-- [ Social Media Meta Tags ] -->
 	<meta content='{{ meta.title }}' property='og:title'/>
 	<meta content='article' property='og:type'/>
+	<meta content='{{ config.facebook }}' property='article:publisher'/>
+	<meta content='{{ config.facebook }}' property='article:author'/>
 	<meta content='{{ current_page.url }}' property='og:url'/>
 	<meta content='{% if meta.img %}{{ meta.img }}{% else %}{{ theme_url }}/img/iceberg.png{% endif %}' property='og:image'/>
 	<meta content='{{ meta.description|striptags }}' property='og:description'/>
@@ -18,6 +21,8 @@
 	<meta content='en_US' property='og:locale'/>
 	<meta content='summary_large_image' name='twitter:card'/>
 	<meta content='{{ meta.title }}' name='twitter:title'/>
+	<meta content='{{ config.twitter }}' name='twitter:site'/>
+	<meta content='{{ config.twitter }}' name='twitter:creator'/>
 	<meta content='{{ meta.description|striptags }}' name='twitter:description'/>
 	<meta content='{% if meta.img %}{{ meta.img }}{% else %}{{ theme_url }}/img/iceberg.png{% endif %}' name='twitter:image'/>
     <!-- Bootstrap Core CSS -->
@@ -61,60 +66,61 @@
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <a class="navbar-brand-post" href="{{ base_url }}">Home</a>
-            </div>
-
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="post-header">
+    <header class="post-header profile-header">
+    
 			<div id="displayavatar">
 				<a href="{{ base_url }}/search/author:{{ meta.author }}">
 					<div class="avatardiv" author="{{ meta.author }}"></div>
 				</a>
 			</div>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="row col-md-offset-1">
                     <div class="post-heading">
-                        <h1>{{ meta.title }}</h1>
-                        <h2 class="subheading">{{ meta.description }}</h2>
-                        <span class="meta">Posted by <a href="{{ base_url }}/search/author:{{ meta.author }}">{{ meta.displayname }}</a> on {{ meta.date }}</span>
+                        <h1 class="displayname">{{ meta.displayname }}</h1>
+                        <!--<h2 class="subheading">{{ meta.description }}</h2>
+								        <div class="social">
+									        {% for social in meta.social %}
+									            <a href="{{ social.url }}" title="{{ social.title }}"><span class="fa fa-{{ social.icon }}"></span></a>
+									        {% endfor %}
+								    		</div>-->
                     </div>
-                </div>
             </div>
         </div>
+
         {% if meta.access == 'private' and meta.permissions != 'none' %}
-            <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}" dir_id="{{ oc_parent_id }}" user="{{ oc_user }}" owner="{{ oc_owner }}" group="{{ oc_group }}">Show file</button>
+            <button class="edit-button btn btn-primary btn-flat" path="{{ oc_path }}"
+            dir_id="{{ oc_parent_id }}" user="{{ oc_user }}" owner="{{ oc_owner }}"
+            group="{{ oc_group }}">Show file</button>
         {% endif %}
+        
+        {% if paged_pages > 1 %}
+	        <div class="home-link">
+	                <a class="navbar-brand-post" href="{{ base_url }}">Home</a>
+	        </div>
+        {% endif %}
+        
     </header>
     
-    <hr class="small">
-
     <!-- Post Content -->
     <article>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-					{{ content }}
+									{{ content }}
                 </div>
             </div>
         </div>
     </article>
     
+	    <p />
+			<hr class="foot">
+
       <div class="col-lg-8">
         <a id="show_comments">Comments <span class="laquo">&laquo;</span><span class="raquo">&raquo;</span></a>
       </div>
-
+      
     <comments>
     <div class="container">
 	    <div class="col-lg-offset-2">
@@ -133,45 +139,6 @@
 	  </div>
     </comments>
     
-    <p />
-    <hr class="foot">
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
-                        <li>
-                            <a href="https://twitter.com/home?status={{ current_page.url }}" target="_blank" rel="noopener noreferrer">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/sharer/sharer.php?u={{ current_page.url }}" target="_blank" rel="noopener noreferrer">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/share?url={{ current_page.url }}" target="_blank" rel="noopener noreferrer">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; {{ site_title }} 2016</p>
-                </div>
-            </div>
-        </div>
-    </footer>
 </body>
 
 </html>
