--- a/lib/samplesite/themes/default/style.css
+++ b/lib/samplesite/themes/default/style.css
@@ -244,6 +244,12 @@ dd {
     height: 35px;
     background: #afe1da url(menu-icon.png) center;
 }
+#header .menu-image {
+    height: 87px;
+    vertical-align: middle;
+    float: right;
+    margin: -27px 0;
+}
 #header nav {
     float: right;
     list-style: none;
@@ -304,6 +310,9 @@ dd {
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
+    #header .menu-image {
+        display:none;
+    }
     .inner {
         width: 85%;
     }
@@ -346,6 +355,9 @@ dd {
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
+    #header .menu-image {
+        display:none;
+    }
     .inner {
         width: 85%;
     }
@@ -383,4 +395,51 @@ dd {
     #header nav:hover ul {
         display: block;
     }
+}
+
+/* Bootstrap button */
+
+
+.buttons {
+    margin-bottom: 0;
+    margin-top: 12px;
+}
+
+.btn-info {
+    background-color: #49afcd;
+    background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+    background-repeat: repeat-x;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    color: #ffffff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+.btn-large {
+    border-radius: 6px;
+    font-size: 17.5px;
+    padding: 11px 19px;
+}
+.btn {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #f5f5f5;
+    background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+    background-repeat: repeat-x;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #b3b3b3;
+    border-image: none;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+    color: #333333;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 0;
+    padding: 4px 12px;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    vertical-align: middle;
 }
